CertificationProject_PersonalPortfolio Added

--- a/ResponsiveWebDesignCertification/CertificationProject_PersonalPortfolio/index.html
+++ b/ResponsiveWebDesignCertification/CertificationProject_PersonalPortfolio/index.html
@@ -31,7 +31,7 @@
         <h1 class="project-title">These are some of my projects</h1>
         <div class="project-links">
             <div class="link">
-                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" class="project-link">
+                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" target="_blank" class="project-link">
                     <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/CertificationProject_TributePage/tribute_cover.png?raw=true"
                         alt="Tribute_Cover" class="cover-image">
                     <div class="cover-title">
@@ -41,57 +41,55 @@
                 </a>
             </div>
             <div class="link">
-                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" class="project-link">
-                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/CertificationProject_TributePage/tribute_cover.png?raw=true"
-                        alt="Tribute_Cover" class="cover-image">
+                <a href="https://replit.com/@ParthSharma59/CertificationProjectSurveyForm?v=1" target="_blank" class="project-link">
+                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/PortfolioCovers/survey_cover.png?raw=true"
+                        alt="Survey_Cover" class="cover-image">
                     <div class="cover-title">
-                        <p><span class="code">&lt;</span>Tribute Page<span class="code">/&gt;</span></p>
-                    </div>
-
-                </a>
-            </div>
-
-
-
-            <div class="link">
-                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" class="project-link">
-                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/CertificationProject_TributePage/tribute_cover.png?raw=true"
-                        alt="Tribute_Cover" class="cover-image">
-                    <div class="cover-title">
-                        <p><span class="code">&lt;</span>Tribute Page<span class="code">/&gt;</span></p>
+                        <p><span class="code">&lt;</span>Survey Form<span class="code">/&gt;</span></p>
                     </div>
 
                 </a>
             </div>
 
             <div class="link">
-                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" class="project-link">
-                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/CertificationProject_TributePage/tribute_cover.png?raw=true"
-                        alt="Tribute_Cover" class="cover-image">
+                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" target="_blank" class="project-link">
+                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/PortfolioCovers/technical_doc_cover.png?raw=true"
+                        alt="Documentation_Cover" class="cover-image">
                     <div class="cover-title">
-                        <p><span class="code">&lt;</span>Tribute Page<span class="code">/&gt;</span></p>
+                        <p><span class="code">&lt;</span>JS Documentation<span class="code">/&gt;</span></p>
                     </div>
 
                 </a>
             </div>
 
             <div class="link">
-                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" class="project-link">
-                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/CertificationProject_TributePage/tribute_cover.png?raw=true"
-                        alt="Tribute_Cover" class="cover-image">
+                <a href="https://replit.com/@ParthSharma59/CitySkyline?v=1" target="_blank" class="project-link">
+                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/PortfolioCovers/skyline-cover.png?raw=true"
+                        alt="Skyline_Cover" class="cover-image">
                     <div class="cover-title">
-                        <p><span class="code">&lt;</span>Tribute Page<span class="code">/&gt;</span></p>
+                        <p><span class="code">&lt;</span>City Skyline<span class="code">/&gt;</span></p>
                     </div>
 
                 </a>
             </div>
 
             <div class="link">
-                <a href="https://replit.com/@ParthSharma59/CertificationProjectTributePage?v=1" class="project-link">
-                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/CertificationProject_TributePage/tribute_cover.png?raw=true"
-                        alt="Tribute_Cover" class="cover-image">
+                <a href="https://replit.com/@ParthSharma59/Penguin?v=1" target="_blank" class="project-link">
+                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/PortfolioCovers/penguin-cover.png?raw=true"
+                        alt="Penguin_Cover" class="cover-image">
                     <div class="cover-title">
-                        <p><span class="code">&lt;</span>Tribute Page<span class="code">/&gt;</span></p>
+                        <p><span class="code">&lt;</span>Animated Penguin<span class="code">/&gt;</span></p>
+                    </div>
+
+                </a>
+            </div>
+
+            <div class="link">
+                <a href="https://replit.com/@ParthSharma59/CertificationProjectLandingPage?v=1" target="_blank" class="project-link">
+                    <img src="https://github.com/parthsharma6321/freeCodeCamp/blob/master/ResponsiveWebDesignCertification/PortfolioCovers/landing-cover.png?raw=true"
+                        alt="Landing_Page_Cover" class="cover-image">
+                    <div class="cover-title">
+                        <p><span class="code">&lt;</span>Landing Page<span class="code">/&gt;</span></p>
                     </div>
 
                 </a>
@@ -99,7 +97,7 @@
 
         </div>
         <div class="show-button">
-            <a href="#" id="profile-link" target="_blank">Show all <span class="show-code">></span></a>
+            <a href="https://replit.com/@ParthSharma59?path=folder/FCC_ResponsiveWebDesign" id="profile-link" target="_blank">Show all <span class="show-code">></span></a>
         </div>
     </section>
     <section id="contact-section">
